enable just plugin

--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -71,8 +71,8 @@ dive = "scripts.entrypoint_main:cli"
 [tool.poetry.plugins."girder.plugin"]
 dive_server = "dive_server:GirderPlugin"
 
-# [tool.poetry.plugins."girder_worker_plugins"]
-# dive_tasks = "dive_tasks:DIVEPlugin"
+[tool.poetry.plugins."girder_worker_plugins"]
+dive_tasks = "dive_tasks:DIVEPlugin"
 
 [build-system]
 requires = ["poetry-core>=1.0.0", "setuptools"]
