--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -72,7 +72,7 @@ dive = "scripts.entrypoint_main:cli"
 dive_server = "dive_server:GirderPlugin"
 
 [tool.poetry.plugins."girder.plugin"]
-dive_server = "dive_tasks:DIVEPlugin"
+dive_tasks = "dive_tasks:DIVEPlugin"
 
 [tool.poetry.plugins."girder_worker_plugins"]
 dive_tasks = "dive_tasks:DIVEPlugin"
