--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -58,8 +58,7 @@ typing-extensions = "^4.2.0"
 GPUtil = "^1.4.0"
 requests = ">=2.27.1"
 urllib3 = "<1.27"
-ffmpeg = "1.4"
-ffprobe = "0.5"
+static-ffmpeg = "2.3"
 
 [tool.poetry.group.dev.dependencies]
 numpy = "^1.21.4"
