--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -49,9 +49,9 @@ python = ">=3.8,<3.10"
 cheroot = ">=8.4.5"
 click = "^8.1.3"
 girder = "3.1.16"
-# girder_jobs = "3.1.16"
-# girder_worker = "0.9.0"
-# girder_worker_utils = "0.8.7"
+girder_jobs = ">=3.1.16"
+girder_worker = ">=0.9.0"
+girder_worker_utils = ">=0.8.7"
 pydantic = "1.9.0"
 pyrabbit2 = "1.0.7"
 typing-extensions = "^4.2.0"
