--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,11 @@
 
 # Use YAML anchors for the common config between both workers
 x-worker: &base-worker
-  deploy:
-    resources:
-      reservations:
-        devices:
-          - capabilities: [gpu]
   ipc: host
   build:
     context: .
     dockerfile: docker/girder_worker.Dockerfile
-  image: kitware/dive-worker:${TAG:-latest}
+  image:  ghcr.io/bryonlewis/dive-disa/dive-dsa-worker:${TAG:-latest}
   volumes:
     - addons:/tmp/addons:ro # readonly
   labels:
@@ -57,7 +52,7 @@ services:
     build:
       context: .
       dockerfile: docker/girder.Dockerfile
-    image: kitware/dive-web:${TAG:-latest}
+    image: ghcr.io/bryonlewis/dive-disa/dive-dsa-web:${TAG:-latest}
     init: true
     command: ["--mode", "production"]
     depends_on:
