--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -17,10 +17,8 @@ jobs:
         with:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
-          # Defaults to the user or organization that owns the workflow file
-          scope: '@octocat'
       - run: yarn
-      - run: yarn build
+      - run: yarn build:web
       - run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
