--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,10 @@
 
-site_name: DIVE
-site_url: https://kitware.github.io/dive
-site_description: Documentation for DIVE
+site_name: DIVE-DSA
+site_url: https://github.io/BryonLewis/dive-dsa
+site_description: Documentation for DIVE-DSA
 site_author: Kitware
 
-repo_url: https://github.com/Kitware/dive
+repo_url: https://github.com/BryonLewis/dive-dsa
 
 theme:
   name: material
@@ -57,17 +57,20 @@ nav:
       - Track List: UI-Track-List.md
       - Timeline: UI-Timeline.md
       - Attributes: UI-Attributes.md
+      - Attribute Shortcuts: UI-AttributeShortcuts.md
       - Attribute Filtering: UI-AttributeFiltering.md
       - Attribute Timeline: UI-AttributeTimeline.md
       - Group Manager: UI-Group-Manager.md    
+    - Configuration:
+      - UI Configuration: UI-Configuration.md
+      - UI Settings: UI-Settings.md
+      - UI Actions: UI-Actions.md
+      - Configuration JSON: UI-ConfigurationJSON.md
     - Keyboard Shortcut Reference: Mouse-Keyboard-Shortcuts.md
     - Screenshots: Screenshots.md
     - Support: Support.md
   - Data Formats: DataFormats.md
   - Administrator Guide:
-    - Deployment Options Overview: Deployment-Overview.md
-    - Provisioning Google Cloud: Deployment-Provision.md
     - Running with Docker Compose: Deployment-Docker-Compose.md
-    - Cloud Storage Integration: Deployment-Storage.md
     - REST API Specification: https://viame.kitware.com/api/v1
   - Support: Support.md
