--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,10 +59,13 @@ nav:
       - Type List: UI-Type-List.md
       - Track List: UI-Track-List.md
       - Timeline: UI-Timeline.md
-      - Attributes: UI-Attributes.md
-      - Attribute Filtering: UI-AttributeFiltering.md
-      - Attribute Timeline: UI-AttributeTimeline.md
+      - Attributes:
+        - Attributes: UI-Attributes.md
+        - Attribute Filtering: UI-AttributeFiltering.md
+        - Attribute Timeline: UI-AttributeTimeline.md
+        - Attribute Rendering: UI-AttributeRendering.md
       - Group Manager: UI-Group-Manager.md    
+      - Dataset Info: UI-DatasetInfo.md
     - Configuration:
       - UI Configuration: UI-Configuration.md
       - UI Settings: UI-Settings.md
