add documentation for timeline settings and adjust readability of timeline editing

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,6 +71,7 @@ nav:
       - UI Configuration: UI-Configuration.md
       - UI Settings: UI-Settings.md
       - UI Actions: UI-Actions.md
+      - UI Timeline Settings: UI-TimelineSettings.md
       - Configuration JSON: UI-ConfigurationJSON.md
     - Keyboard Shortcut Reference: Mouse-Keyboard-Shortcuts.md
     - Screenshots: Screenshots.md
