--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -59,6 +59,7 @@ GPUtil = "^1.4.0"
 requests = ">=2.27.1"
 urllib3 = "<1.27"
 poetry-dynamic-versioning = {extras = ["plugin"], version = "^0.21.4"}
+girder-slicer-cli-web = "^1.3.5"
 
 [tool.poetry.group.dev.dependencies]
 numpy = "^1.21.4"
