--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
       - traefik
     volumes:
       - girder_assetstore:/home/assetstore
+      - /var/run/docker.sock:/var/run/docker.sock
       # Bind mount nocopy public data
       - type: bind
         source: ${PUBLIC_DATA_PATH:-./docker/girder_data}
@@ -69,6 +70,7 @@ services:
         volume:
           nocopy: true
     environment:
+      - "DSA_USER=${DSA_USER:-}"
       - "GIRDER_MONGO_URI=mongodb://mongo:27017/girder"
       - "GIRDER_ADMIN_USER=${GIRDER_ADMIN_USER:-admin}"
       - "GIRDER_ADMIN_PASS=${GIRDER_ADMIN_PASS:-letmein}"
@@ -98,6 +100,7 @@ services:
       - addons:/tmp/addons:rw
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
+      - "DSA_USER=${DSA_USER:-}"
       - "WORKER_WATCHING_QUEUES=celery"
       - "WORKER_CONCURRENCY=${DEFAULT_WORKER_CONCURRENCY:-3}"
       - "CELERY_BROKER_URL=${CELERY_BROKER_URL:-amqp://guest:guest@rabbit/default}"
