--- a/server/tox.ini
+++ b/server/tox.ini
@@ -44,16 +44,8 @@ deps =
     pytest
     pytest-ordering
 commands =
-    pytest tests -m "not integration" {posargs}
+    pytest tests {posargs}
 
-[testenv:testintegration]
-passenv = GIRDER_API_KEY
-deps =
-    pytest
-    girder
-    pytest-ordering
-commands =
-    pytest tests -m integration {posargs}
 
 [testenv:docs]
 skipsdist = true
@@ -120,5 +112,3 @@ black-config = pyproject.toml
 
 [pytest]
 addopts = --strict-markers --showlocals --verbose
-markers =
-    integration: Integration testing
