--- a/client/package.json
+++ b/client/package.json
@@ -25,12 +25,12 @@
   "main": "lib/index.js",
   "types": "lib/types/index.d.ts",
   "dependencies": {
+    "@bryonlewis/vue-girder-slicer-cli-ui": "file:/home/local/KHQ/bryon.lewis/dev/dive-dsa-slicer/vue-girder-slicer-ui",
     "@flatten-js/interval-tree": "^1.0.11",
     "@girder/components": "^3.2.0",
     "@mdi/font": "^6.2.95",
     "@sentry/browser": "^5.24.2",
     "@sentry/integrations": "^5.24.2",
-    "@vue/composition-api": "^1.1.4",
     "axios": "^0.21.1",
     "color-hash": "^1.0.3",
     "core-js": "^3.6.4",
@@ -42,13 +42,15 @@
     "moment": "^2.29.1",
     "mousetrap": "^1.6.5",
     "semver": "^7.3.5",
-    "vue": "^2.6.12",
+    "vue": "^2.7.0",
     "vue-gtag": "^1.9.1",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.6.5",
     "vuetify": "^2.3.10",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@sentry/webpack-plugin": "^1.18.3",
     "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.0",
@@ -95,7 +97,6 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
     "express": "^4.17.1",
-    "ffmpeg-ffprobe-static": "^4.4.0-rc.11",
     "fs-extra": "^9.0.1",
     "git-describe": "^4.0.4",
     "jest": "^26.6.3",
@@ -112,14 +113,14 @@
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-vue": "^6.0.0",
-    "sass": "^1.26.3",
+    "sass": "1.26.3",
     "sass-loader": "^8.0.2",
     "ts-jest": "^26.5.2",
     "tsc-alias": "^1.2.0",
     "typescript": "~3.8.3",
     "vue-cli-plugin-vuetify": "^2.4.3",
     "vue-jest": "^3.0.7",
-    "vue-template-compiler": "^2.6.12",
+    "vue-template-compiler": "^2.7.15",
     "vue-type-check": "^1.0.0",
     "vuetify-loader": "^1.7.3",
     "xml-js": "^1.6.11",
