--- a/client/package.json
+++ b/client/package.json
@@ -9,14 +9,12 @@
   "homepage": "https://kitware.github.io/dive",
   "license": "Apache-2.0",
   "scripts": {
-    "serve": "vue-cli-service serve platform/web-girder/main.ts",
-    "build:web": "vue-cli-service build platform/web-girder/main.ts",
-    "build:package": "vue-cli-service build --target lib --name DIVE-DSA platform/web-girder/main.ts",
-    "build:lib": "rollup -c",
-    "build:cli": "tsc -b tsconfig.cli.json && tsc-alias -p tsconfig.cli.json",
-    "lint": "vue-cli-service lint src/ dive-common/ platform/",
-    "lint:templates": "vtc --workspace . --srcDir src/",
-    "test": "vue-cli-service test:unit src/ dive-common/ platform/"
+    "dev": "vite",
+    "build": "vue-tsc && vite build",
+    "build:web": "vue-tsc && vite build",
+    "serve": "vite preview",
+    "typecheck": "vue-tsc --noEmit",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "resolutions": {},
   "files": [
@@ -31,7 +29,7 @@
     "@mdi/font": "^6.2.95",
     "@sentry/browser": "^5.24.2",
     "@sentry/integrations": "^5.24.2",
-    "axios": "^0.21.1",
+    "axios": "^1.5.0",
     "color-hash": "^1.0.3",
     "core-js": "^3.6.4",
     "csv-stringify": "^5.6.0",
@@ -45,14 +43,11 @@
     "vue": "^2.7.0",
     "vue-gtag": "^1.9.1",
     "vue-router": "^3.6.5",
-    "vuetify": "^2.3.10",
+    "vuetify": "^2.3.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@sentry/webpack-plugin": "^1.18.3",
-    "@types/axios": "^0.14.0",
     "@types/body-parser": "^1.19.0",
     "@types/color-hash": "^1.0.0",
     "@types/cors": "^2.8.9",
@@ -67,7 +62,6 @@
     "@types/mime-types": "^2.1.0",
     "@types/mock-fs": "^4.13.1",
     "@types/mousetrap": "^1.6.3",
-    "@types/node": "^12.18.3",
     "@types/proper-lockfile": "^4.1.1",
     "@types/pump": "^1.1.0",
     "@types/range-parser": "^1.2.3",
@@ -75,27 +69,20 @@
     "@types/resize-observer-browser": "^0.1.4",
     "@types/semver": "^7.3.8",
     "@types/source-map": "0.5.2",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-plugin-typescript": "~4.5.15",
-    "@vue/cli-plugin-unit-jest": "~4.5.15",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
     "@vue/cli-service": "~4.5.15",
     "@vue/compiler-sfc": "^3.2.20",
-    "@vue/eslint-config-airbnb": "^5.0.2",
-    "@vue/eslint-config-typescript": "^5.0.2",
+    "@vue/eslint-config-airbnb": "^6.0.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^1.0.3",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.0.1",
-    "babel-register": "^6.26.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "csv-parse": "^4.13.1",
-    "eslint": "^6.7.2",
+    "eslint": "^8.50.0",
     "eslint-import-resolver-typescript": "^2.2.0",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^9.17.0",
     "express": "^4.17.1",
     "fs-extra": "^9.0.1",
     "git-describe": "^4.0.4",
@@ -117,11 +104,14 @@
     "sass-loader": "^8.0.2",
     "ts-jest": "^26.5.2",
     "tsc-alias": "^1.2.0",
-    "typescript": "~3.8.3",
+    "typescript": "~3.9.6",
+    "unplugin-vue-components": "^0.25.2",
+    "vite": "^4.5.0",
+    "vite-plugin-vue2": "^2.0.3",
     "vue-cli-plugin-vuetify": "^2.4.3",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.7.15",
-    "vue-type-check": "^1.0.0",
+    "vue-tsc": "^1.4.2",
     "vuetify-loader": "^1.7.3",
     "xml-js": "^1.6.11",
     "yargs": "^16.1.0"
@@ -136,8 +126,7 @@
     },
     "transform": {
       ".*\\.(vue)$": "vue-jest",
-      "^.+\\.tsx?$": "ts-jest",
-      "^.+\\.jsx?$": "babel-jest"
+      "^.+\\.tsx?$": "ts-jest"
     },
     "globals": {
       "ts-jest": {
