--- a/client/package.json
+++ b/client/package.json
@@ -114,6 +114,7 @@
     "sass-loader": "^8.0.2",
     "ts-jest": "^27.0.4",
     "tsc-alias": "^1.2.0",
+    "tslib": "^2.6.2",
     "typescript": "~4.3.5",
     "vue-cli-plugin-vuetify": "^2.4.3",
     "vue-jest": "^3.0.7",
