--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
     "d3": "^5.12.0",
     "geojs": "~1.6.2",
     "glob-to-regexp": "^0.4.1",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.19",
     "moment": "^2.29.1",
     "mousetrap": "^1.6.5",
@@ -59,6 +60,7 @@
     "@types/geojson": "^7946.0.7",
     "@types/glob-to-regexp": "^0.4.0",
     "@types/jest": "^27.0.4",
+    "@types/js-cookie": "^3.0.6",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash": "^4.14.151",
     "@types/mime-types": "^2.1.0",
