--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.black]
 line-length = 100
 skip-string-normalization = true
-target-version = ["py38"]
+target-version = ["py311"]
 exclude = '\.eggs|\.git|\.mypy_cache|\.tox|\.env|\.venv|env|venv|_build|buck-out|build|dist'
 
 [tool.isort]
@@ -13,7 +13,7 @@ force_sort_within_sections = true
 combine_as_imports = true
 
 [tool.mypy]
-python_version = 3.8
+python_version = 3.11
 ignore_missing_imports = true
 show_error_context = true
 show_column_numbers = true
@@ -37,6 +37,7 @@ classifiers = [
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.8",
   "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.11",
 ]
 packages = [
   { include = "dive_server" },
@@ -45,7 +46,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.10"
+python = ">=3.8,<3.12"
 cheroot = ">=8.4.5"
 click = "^8.1.3"
 girder = ">=3.1.16"
@@ -78,7 +79,7 @@ dive_server = "dive_server:GirderPlugin"
 dive_tasks = "dive_tasks:DIVEPlugin"
 
 [build-system]
-requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.poetry-dynamic-versioning]
