--- a/server/tox.ini
+++ b/server/tox.ini
@@ -9,13 +9,11 @@ isolated_build = True
 skipsdist = true
 skip_install = true
 deps =
-    flake8 == 3.9.2
-    flake8-black == 0.3.2
-    flake8-bugbear == 21.9.2
-    flake8-docstrings == 1.6.0
-    flake8-isort == 4.1.1
-    flake8-quotes == 3.3.1
-    pep8-naming == 0.12.1
+    flake8
+    flake8-bugbear
+    flake8-docstrings>=1.3.1
+    flake8-typing-imports>=1.1
+    pep8-naming
 commands =
     flake8 {posargs:.}
 
@@ -25,6 +23,18 @@ skip_install = true
 deps =
     black
     isort
+exclude =
+    .git,
+    __pycache__,
+    .tox,
+    .mypy_cache,
+    .eggs,
+    *.egg,
+    .env,
+    .venv,
+    env,
+    venv,
+    dive_server/web_client
 commands =
     black {posargs:.}
     isort {posargs:.}
@@ -79,22 +89,38 @@ commands =
 max-line-length = 100
 show-source = True
 ignore =
-    D10,  # Missing docstring (errors D100 - D107)
-    D200, # One-line docstrings should fit on one line with quotes
-    D205, # Blank line required between one-line summary and description
-    D400, # First line should end with a period
-    D401, # First line should be in imperative mood
-    E123, # Closing bracket does not match indentation of opening bracket's line
-    E203, # Whitespace before ':'
-    N802, # Function name should be lowercase
-    N803, # Argument name should be lowercase
-    N806, # Variable in function should be lowercase
-    N812, # Lowercase imported as non lowercase
-    N815, # mixedCase variable in class scope
-    N816, # mixedCase variable in global scope
-    W503, # Line break occurred before a binary operator
-    W605, # Invalid escape sequence
-    Q000, # Remove bad quotes
+    # Missing docstring (errors D100 - D107)
+    D10,
+    # One-line docstrings should fit on one line with quotes
+    D200,
+    # Blank line required between one-line summary and description
+    D205,
+    # First line should end with a period
+    D400,
+    # First line should be in imperative mood
+    D401,
+    # Closing bracket does not match indentation of opening bracket's line
+    E123,
+    # Whitespace before ':'
+    E203,
+    # Function name should be lowercase
+    N802,
+    # Argument name should be lowercase
+    N803,
+    # Variable in function should be lowercase 
+    N806,
+    # Lowercase imported as non lowercase
+    N812,
+    # mixedCase variable in class scope
+    N815,
+    # mixedCase variable in global scope
+    N816,
+    # Line break occurred before a binary operator
+    W503,
+    # Invalid escape sequence
+    W605,
+     # Remove bad quotes
+    Q000,
 exclude =
     .git,
     __pycache__,
@@ -106,6 +132,7 @@ exclude =
     .venv,
     env,
     venv,
+    dive_server/web_client
 per-file-ignores =
     tests/*.py: E501
 black-config = pyproject.toml
