linting fix because of tox changes

--- a/server/tox.ini
+++ b/server/tox.ini
@@ -121,6 +121,11 @@ ignore =
     W605,
      # Remove bad quotes
     Q000,
+    B023,
+    TYP001,
+    N801,
+    E721,
+    E501,
 exclude =
     .git,
     __pycache__,
