--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   "main": "lib/index.js",
   "types": "lib/types/index.d.ts",
   "dependencies": {
+    "vue-girder-slicer-cli-ui": "0.0.8",
     "@flatten-js/interval-tree": "^1.0.11",
     "@girder/components": "^3.2.0",
     "@mdi/font": "^6.2.95",
@@ -114,6 +115,7 @@
     "rollup-plugin-vue": "^6.0.0",
     "sass": "~1.32.6",
     "sass-loader": "^8.0.2",
+    "tailwindcss": "^3.3.6",
     "ts-jest": "^27.0.4",
     "tsc-alias": "^1.2.0",
     "tslib": "^2.6.2",
