added basic documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -75,6 +75,7 @@ nav:
       - UI Timeline Settings: UI-TimelineSettings.md
       - Configuration JSON: UI-ConfigurationJSON.md
     - Keyboard Shortcut Reference: Mouse-Keyboard-Shortcuts.md
+    - UI Notifications: UI-Notifications.md
     - Screenshots: Screenshots.md
     - Support: Support.md
     - Experimental: Experimental.md
