--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -57,7 +57,7 @@ pydantic = "1.10.13"
 pyrabbit2 = "1.0.7"
 typing-extensions = "^4.2.0"
 GPUtil = "^1.4.0"
-requests = ">=2.27.1"
+requests = "<2.32.0"
 urllib3 = "<1.27"
 poetry-dynamic-versioning = {extras = ["plugin"], version = "^0.21.4"}
 girder-slicer-cli-web = "^1.3.5"
