update documentation, increment version

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -78,7 +78,7 @@ nav:
     - UI Notifications: UI-Notifications.md
     - Screenshots: Screenshots.md
     - Support: Support.md
-    - Experimental: Experimental.md
+    - Video Overlay: VideoOverlay.md
 
   - Data Formats: DataFormats.md
   - Administrator Guide:
