--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,6 +76,7 @@ nav:
       - Configuration JSON: UI-ConfigurationJSON.md
     - Keyboard Shortcut Reference: Mouse-Keyboard-Shortcuts.md
     - UI Notifications: UI-Notifications.md
+    - DIVE Metadata: DIVE-Metadata.md
     - Screenshots: Screenshots.md
     - Support: Support.md
     - Video Overlay: VideoOverlay.md
