Adjust buttons in the item list
This requires that the large_image girder plugin is installed and loaded
first.

--- a/server/dive_server/web_client/package.json
+++ b/server/dive_server/web_client/package.json
@@ -8,7 +8,10 @@
     "girderPlugin": {
         "name": "dive_server",
         "main": "./main.js",
-        "webpack": "webpack.helper"
+        "webpack": "webpack.helper",
+        "dependencies": [
+            "large_image"
+        ]
     },
     "dependencies": {
         "dive-dsa": "^1.10.3",
