--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -54,6 +54,7 @@ girder_jobs = ">=3.2.6"
 girder_client = ">=3.2.6"
 girder_worker = ">=0.10.3"
 girder_worker_utils = ">=0.9.1"
+girder_large_image = ">=1.30.2"
 pydantic = "1.10.13"
 pyrabbit2 = "1.0.7"
 typing-extensions = "^4.2.0"
