update dive-dsa-slicer build

--- a/.github/workflows/workflow-dive-dsa-slicer.yml
+++ b/.github/workflows/workflow-dive-dsa-slicer.yml
@@ -26,6 +26,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./dive-dsa-slicer
-          file: example-docker-containers/Dockerfile
+          file: ./dive-dsa-slicer/example-docker-containers/Dockerfile
           tags: ghcr.io/digitalslidearchive/dive-dsa/dive-dsa-slicer-examples:latest
           push: true
