--- a/client/package.json
+++ b/client/package.json
@@ -60,7 +60,7 @@
     "@types/jest": "^27.0.4",
     "@types/js-cookie": "^3.0.6",
     "@types/js-yaml": "^4.0.5",
-    "@types/lodash": "^4.14.151",
+    "@types/lodash": "4.17.0",
     "@types/mime-types": "^2.1.0",
     "@types/mock-fs": "^4.13.1",
     "@types/mousetrap": "^1.6.3",
