--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ x-worker: &base-worker
   build:
     context: .
     dockerfile: docker/girder_worker.Dockerfile
-  image:  ghcr.io/digitalslidearchive/dive-dsa/dive-dsa-worker:${TAG:-latest}
+  image:  ghcr.io/digitalslidearchive/dive-dsa/dive-dsa-worker:${TAG:-girder-5}
   volumes:
     - addons:/tmp/addons:ro # readonly
     - /var/run/docker.sock:/var/run/docker.sock
@@ -54,7 +54,7 @@ services:
     build:
       context: .
       dockerfile: docker/girder.Dockerfile
-    image: ghcr.io/digitalslidearchive/dive-dsa/dive-dsa-web:${TAG:-latest}
+    image: ghcr.io/digitalslidearchive/dive-dsa/dive-dsa-web:${TAG:-girder-5}
     init: true
     command: ["--mode", "production"]
     depends_on:
@@ -101,7 +101,7 @@ services:
       - ${TMPDIR:-/tmp}:${TMPDIR:-/tmp}
     environment:
       - "DSA_USER=${DSA_USER:-}"
-      - "WORKER_WATCHING_QUEUES=celery"
+      - "WORKER_WATCHING_QUEUES=celery, local"
       - "WORKER_CONCURRENCY=${DEFAULT_WORKER_CONCURRENCY:-3}"
       - "CELERY_BROKER_URL=${CELERY_BROKER_URL:-amqp://guest:guest@rabbit/default}"
       - "TMPDIR="
