--- a/server/dive_server/web_client/package.json
+++ b/server/dive_server/web_client/package.json
@@ -2,20 +2,46 @@
     "name": "@girder/dive_server",
     "version": "0.0.0",
     "description": "Video and Image Sequence Annotations",
-    "peerDependencies": {
-        "@girder/core": "*"
-    },
-    "girderPlugin": {
-        "name": "dive_server",
-        "main": "./main.js",
-        "webpack": "webpack.helper",
-        "dependencies": [
-            "large_image"
-        ]
+    "ignorePatterns": [
+        "dist/**"
+    ],
+    "type": "module",
+    "main": "./index.js",
+    "root": true,
+    "globals": {
+        "girder": "readonly"
     },
     "dependencies": {
-        "dive-dsa": "^1.10.25",
-        "webpack": "^2.7.0",
-        "copy-webpack-plugin": "^4.5.2"
+        "@girder/core": "^5.0.0-beta.0",
+        "yaml": "^2.1.1"
+    },
+    "devDependencies": {
+        "@girder/eslint-config": "*",
+        "@girder/pug-lint-config": "*",
+        "eslint": "^8.20.0",
+        "eslint-config-semistandard": "^17.0.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-backbone": "^2.1.1",
+        "eslint-plugin-import": "^2.25.3",
+        "eslint-plugin-n": "^15.2.4",
+        "eslint-plugin-promise": "^6.0.0",
+        "eslint-plugin-vue": "~9.14.0",
+        "pug": "^3.0.3",
+        "pug-lint": "^2.6.0",
+        "vite": "^5.2.13",
+    },
+
+    "pugLintConfig": {
+        "extends": "@girder/pug-lint-config",
+        "excludeFiles": [
+            "**/node_modules/"
+        ]
+    },
+    "scripts": {
+        "build": "vite build",
+        "watch": "vite build --watch",
+        "lint": "eslint --cache . && eslint --no-eslintrc -c ./package.json --cache ../../test_girder/web_client_specs && pug-lint . && stylus-supremacy format --compare ./**/*.styl --options package.json",
+        "format": "eslint --cache --fix . && eslint --no-eslintrc -c ./package.json --cache --fix ../../test_girder/web_client_specs && stylus-supremacy format ./**/*.styl --replace --options package.json",
+        "test": "playwright test"
     }
 }
