--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -49,12 +49,12 @@ packages = [
 python = ">=3.8,<3.12"
 cheroot = ">=8.4.5"
 click = "^8.1.3"
-girder = ">=3.2.8"
-girder_jobs = ">=3.2.8"
-girder_client = ">=3.2.8"
-girder_worker = ">=0.10.3"
+girder = ">=5.0.0.a5"
+girder_jobs = ">=5.0.0.a5"
+girder_client = ">=5.0.0.a5"
+girder_worker = ">=5.0.0.a5"
 girder_worker_utils = ">=0.9.1"
-girder_large_image = ">=1.30.2"
+girder_large_image = ">=1.32.0a3"
 pydantic = "1.10.13"
 pyrabbit2 = "1.0.7"
 typing-extensions = "^4.2.0"
