--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -46,7 +46,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.12"
+python = ">=3.9,<3.12"
 cheroot = ">=8.4.5"
 click = "^8.1.3"
 girder = ">=3.2.8"
@@ -63,6 +63,10 @@ requests = "<2.32.0"
 urllib3 = "<1.27"
 poetry-dynamic-versioning = {extras = ["plugin"], version = "^0.21.4"}
 girder-slicer-cli-web = "^1.3.5"
+pycocotools = "^2.0.8"
+pillow = "^11.2.1"
+numpy = "^1.21.4"
+
 
 [tool.poetry.group.dev.dependencies]
 numpy = "^1.21.4"
