--- a/server/dive_server/web_client/package.json
+++ b/server/dive_server/web_client/package.json
@@ -28,7 +28,7 @@
         "eslint-plugin-vue": "~9.14.0",
         "pug": "^3.0.3",
         "pug-lint": "^2.6.0",
-        "vite": "^5.2.13",
+        "vite": "^5.2.13"
     },
 
     "pugLintConfig": {
