--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -54,7 +54,7 @@ girder_jobs = ">=5.0.0.a5"
 girder_client = ">=5.0.0.a5"
 girder_worker = ">=5.0.0.a5"
 girder_worker_utils = ">=0.9.1"
-girder_large_image = ">=1.32.0a3"
+girder_large_image = ">=1.32.2a117"
 pydantic = "1.10.13"
 pyrabbit2 = "1.0.7"
 typing-extensions = "^4.2.0"
@@ -63,6 +63,7 @@ requests = "<2.32.0"
 urllib3 = "<1.27"
 poetry-dynamic-versioning = {extras = ["plugin"], version = "^0.21.4"}
 girder-slicer-cli-web = "^1.3.5"
+girder-plugin-worker = "^5.0.0a6.dev41"
 
 [tool.poetry.group.dev.dependencies]
 numpy = "^1.21.4"
