--- a/server/dive_server/web_client/package.json
+++ b/server/dive_server/web_client/package.json
@@ -28,9 +28,9 @@
         "eslint-plugin-vue": "~9.14.0",
         "pug": "^3.0.3",
         "pug-lint": "^2.6.0",
+        "stylus": "^0.64.0",
         "vite": "^5.2.13"
     },
-
     "pugLintConfig": {
         "extends": "@girder/pug-lint-config",
         "excludeFiles": [
