--- a/server/dive_server/web_client/package.json
+++ b/server/dive_server/web_client/package.json
@@ -16,21 +16,22 @@
         "yaml": "^2.1.1"
     },
     "devDependencies": {
-        "@girder/eslint-config": "*",
-        "@girder/pug-lint-config": "*",
-        "eslint": "^8.20.0",
-        "eslint-config-semistandard": "^17.0.0",
-        "eslint-config-standard": "^17.0.0",
+        "@girder/eslint-config": "^3.0.2",
+        "@girder/pug-lint-config": "^3.0.2",
+        "eslint": "^6.5.1",
+        "eslint-config-semistandard": "^15.0.0",
+        "eslint-config-standard": "^14.1.0",
         "eslint-plugin-backbone": "^2.1.1",
-        "eslint-plugin-import": "^2.25.3",
-        "eslint-plugin-n": "^15.2.4",
-        "eslint-plugin-promise": "^6.0.0",
-        "eslint-plugin-vue": "~9.14.0",
+        "eslint-plugin-import": "^2.18.2",
+        "eslint-plugin-node": "^10.0.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.1",
         "pug": "^3.0.3",
         "pug-lint": "^2.6.0",
-        "stylus": "^0.64.0",
-        "vite": "^5.2.13"
-    },
+        "stylint": "^2.0.0",
+        "stylus": "^0.63.0",
+        "vite": "^5.3.1"
+        },
     "pugLintConfig": {
         "extends": "@girder/pug-lint-config",
         "excludeFiles": [
