--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,8 @@ services:
       - "GIRDER_ADMIN_USER=${GIRDER_ADMIN_USER:-admin}"
       - "GIRDER_ADMIN_PASS=${GIRDER_ADMIN_PASS:-letmein}"
       - "GIRDER_WORKER_BROKER=${GIRDER_WORKER_BROKER:-amqp://guest:guest@rabbit/default}"
-      - "GIRDER_WORKER_BACKEND=${GIRDER_WORKER_BACKEND:-http://girder:8080/api/v1}"
+      - "GIRDER_WORKER_BACKEND=${GIRDER_WORKER_BACKEND:-rpc://guest:guest@localhost/}"
+      - "GIRDER_SETTING_WORKER_API_URL=${GIRDER_SETTING_WORKER_API_URL}:-http://localhost:8080/api/v1"
       # Rabbitmq management variables
       - "RABBITMQ_MANAGEMENT_USERNAME=${RABBITMQ_MANAGEMENT_USERNAME:-guest}"
       - "RABBITMQ_MANAGEMENT_PASSWORD=${RABBITMQ_MANAGEMENT_PASSWORD:-guest}"
@@ -104,7 +105,10 @@ services:
       - "WORKER_WATCHING_QUEUES=celery, local"
       - "WORKER_CONCURRENCY=${DEFAULT_WORKER_CONCURRENCY:-3}"
       - "GIRDER_WORKER_BROKER=${GIRDER_WORKER_BROKER:-amqp://guest:guest@rabbit/default}"
+      - "GIRDER_WORKER_BACKEND=${GIRDER_WORKER_BACKEND:-rpc://guest:guest@localhost/}"
+      - "GIRDER_SETTING_WORKER_API_URL=${GIRDER_SETTING_WORKER_API_URL}:-http://localhost:8080/api/v1"
       - "TMPDIR="
+
 volumes:
   mongo_db:
   girder_assetstore:
