--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -46,7 +46,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.12"
+python = ">=3.10.0,<3.12"
 cheroot = ">=8.4.5"
 click = "^8.1.3"
 girder = ">=3.2.8"
@@ -66,6 +66,9 @@ girder-slicer-cli-web = "^1.3.5"
 pycocotools = "^2.0.8"
 pillow = "^11.2.1"
 numpy = "^1.21.4"
+torch = "^2.7.0"
+sam2 = "^1.1.0"
+opencv-python-headless = "^4.11.0.86"
 
 
 [tool.poetry.group.dev.dependencies]
