--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,6 @@
 # Use YAML anchors for the common config between both workers
 x-worker: &base-worker
   ipc: host
-  deploy:
-    resources:
-      reservations:
-        devices:
-          - capabilities: [gpu]
   platform: 'linux/amd64'
   build:
     context: .
@@ -110,6 +105,37 @@ services:
       - "WORKER_CONCURRENCY=${DEFAULT_WORKER_CONCURRENCY:-3}"
       - "CELERY_BROKER_URL=${CELERY_BROKER_URL:-amqp://guest:guest@rabbit/default}"
       - "TMPDIR="
+  girder_worker_gpu:
+    ipc: host
+    platform: 'linux/amd64'
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - capabilities: [gpu]
+    build:
+      context: .
+      dockerfile: docker/girder_worker_gpu.Dockerfile
+    image: ghcr.io/digitalslidearchive/dive-dsa/dive-dsa-worker-gpu:${TAG:-latest}
+    volumes:
+      - addons:/tmp/addons:ro # readonly
+      - /var/run/docker.sock:/var/run/docker.sock
+    labels:
+      - "com.centurylinklabs.watchtower.enable=true"
+    depends_on:
+      girder:
+        condition: service_started
+      rabbit:
+        condition: service_started
+    environment:
+      - "DSA_USER=${DSA_USER:-}"
+      - "WORKER_WATCHING_QUEUES=gpu"
+      - "WORKER_CONCURRENCY=${DEFAULT_WORKER_CONCURRENCY:-3}"
+      - "CELERY_BROKER_URL=${CELERY_BROKER_URL:-amqp://guest:guest@rabbit/default}"
+      - "TMPDIR="
 volumes:
   mongo_db:
   girder_assetstore:
+  addons:
+  
+
