--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -46,7 +46,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10.0,<3.12"
+python = ">=3.10.0,<=3.12"
 cheroot = ">=8.4.5"
 click = "^8.1.3"
 girder = ">=3.2.8"
