functional uploading of each frame feature and item, dive config client configuration, templating UI notifications

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,3 +9,6 @@ services:
   girder_worker_default:
     volumes:
       - ./server:/opt/dive/src
+  girder_worker_gpu:
+    volumes:
+      - ./server:/opt/dive/src
