--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,8 +77,8 @@ nav:
     - Keyboard Shortcut Reference: Mouse-Keyboard-Shortcuts.md
     - UI Notifications: UI-Notifications.md
     - DIVE Metadata: DIVE-Metadata.md
-    - SAM2 Support : DIVE-Metadata.md
-    - Screenshots: SAM2-Support.md
+    - SAM2 Support : SAM2-Support.md
+    - Screenshots: Screenshots.md
     - Support: Support.md
     - Video Overlay: VideoOverlay.md
 
