SAM2 DIVE-DSA Integration (#263)
* initial SAM2 integration commit

* swap to string for modelName

* basic SAM2 tracking functioning

* working gpu SAM2

* cleanup gpu dockerfile

* default queue, update patching

* prevent Revision while saving annotations

* dive config setup, initial each mask upload

* linting

* functional uploading of each frame feature and item, dive config client configuration, templating UI notifications

* client UI, follow updates, batch processing

* adding support for SAM2 Configuration to admin panel

* handle end of video

* updating mask tracking defaults

* increment version

* adding documentation

* adding documentation

* linting

* update mkdocs

* material design radar for docs

* poetry lock update

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -77,6 +77,7 @@ nav:
     - Keyboard Shortcut Reference: Mouse-Keyboard-Shortcuts.md
     - UI Notifications: UI-Notifications.md
     - DIVE Metadata: DIVE-Metadata.md
+    - SAM2 Support : SAM2-Support.md
     - Screenshots: Screenshots.md
     - Support: Support.md
     - Video Overlay: VideoOverlay.md
