--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@flatten-js/interval-tree": "^1.0.11",
     "@girder/components": "^3.2.0",
     "@mdi/font": "^6.2.95",
+    "@mdi/js": "^7.4.47",
     "axios": "^1.6.7",
     "color-hash": "^1.0.3",
     "core-js": "^3.22.2",
