initial attempt to conver to UV

--- a/server/tox.ini
+++ b/server/tox.ini
@@ -1,9 +1,11 @@
 [tox]
-envlist = 
+envlist =
     lint
     type
     testunit
 isolated_build = True
+requires =
+    tox-uv>=1.0.0
 
 [testenv:lint]
 skipsdist = true
@@ -48,13 +50,13 @@ commands =
     mypy --install-types --non-interactive {posargs:.}
 
 [testenv:testunit]
-extra =
+extras =
     dev
 deps =
     pytest
     pytest-ordering
 commands =
-    pytest tests {posargs}
+    uv run pytest tests {posargs}
 
 
 [testenv:docs]
@@ -83,7 +85,7 @@ commands =
 deps =
     pyinstaller
 commands =
-    pyinstaller --name dive --onefile scripts/entrypoint_main.py {posargs}
+    uv run pyinstaller --name dive --onefile scripts/entrypoint_main.py {posargs}
 
 [flake8]
 max-line-length = 100
